--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,14 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.2'
+    testImplementation 'com.google.truth:truth:0.42'
+}
+
+test {
+    useJUnitPlatform()
 }
 
 compileKotlin {
