--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,9 @@ test {
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
-    kotlinOptions.freeCompilerArgs = ['-Xuse-experimental=kotlin.ExperimentalUnsignedTypes']
+    kotlinOptions.freeCompilerArgs = ['-Xopt-in=kotlin.RequiresOptIn']
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
-    kotlinOptions.freeCompilerArgs = ['-Xuse-experimental=kotlin.ExperimentalUnsignedTypes']
+    kotlinOptions.freeCompilerArgs = ['-Xopt-in=kotlin.RequiresOptIn']
 }
